# gameEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt
Content/: Config.json  Save.json
Content/Shaders/: Additive.frag  Blur.frag  Downsample.frag  Glitch.frag  Invert.frag  Monitor.frag
Engine/Include/Core/: Engine.hpp  EngineConfig.hpp  EngineContext.hpp  EngineVisitor.hpp  Overlay.hpp
Engine/Include/Graphics/: Effect.hpp
Engine/Include/Graphics/Effects/: EffectBloom.hpp  EffectGlitch.hpp  EffectInverted.hpp  EffectMonitor.hpp
Engine/Include/Managers/: AudioManager.hpp  ClipboardManager.hpp  CursorManager.hpp  GuiManager.hpp  InputManager.hpp  RandomManager.hpp  RenderManager.hpp  ResourceManager.hpp  SaveManager.hpp  SceneManager.hpp  ScreenshotManager.hpp
Engine/Include/Scene/: Scene.hpp  SceneFactory.hpp  SceneUtils.hpp
Engine/Include/Utils/: Cooldown.hpp  InputBindings.hpp  Log.hpp  Verify.hpp
Engine/Source/: Main.cpp
Engine/Source/Core/: Engine.cpp  EngineConfig.cpp  EngineVisitor.cpp  Overlay.cpp
Engine/Source/Graphics/Effects/: EffectBloom.cpp  EffectGlitch.cpp  EffectInverted.cpp  EffectMonitor.cpp
Engine/Source/Managers/: AudioManager.cpp  ClipboardManager.cpp  CursorManager.cpp  GuiManager.cpp  InputManager.cpp  RandomManager.cpp  RenderManager.cpp  ResourceManager.cpp  SaveManager.cpp  SceneManager.cpp  ScreenshotManager.cpp  TimeManager.cpp
Engine/Source/Scene/: SceneFactory.cpp
Engine/Source/Utils/: Cooldown.cpp  InputBindings.cpp
Games/Include/: Bounce.hpp  Clicker.hpp  MemoryCard.hpp
Games/Include/Config/: BounceConfig.hpp  ClickerConfig.hpp  MemoryCardConfig.hpp
Games/Include/Types/: BounceTypes.hpp  ClickerTypes.hpp  MemoryCardTypes.hpp
Games/Source/: Bounce.cpp  Clicker.cpp  MemoryCard.cpp
